#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======
Tag: V00-03-42
2016-03-07 Mikhail S. Dubrovin
- app/det_ndarr_average - save max file w/o header for cspad2x2
- app/det_ndarr_raw_proc - make configurable output file names for calibman compatability
- add app/event_keys - for calibman

Tag: V00-03-41
2016-03-05 Mikhail S. Dubrovin
- det_ndarr_average - use det.save_txtnda and det.save_asdaq
	
Tag: V00-03-40
2016-02-25 Mikhail S. Dubrovin
- exteld det_ndarr_raw_proc for case of many sources
	
Tag: V00-03-39
2016-02-24 Mikhail S. Dubrovin
- add AreaDetector.save_asdaq, update examples, app/det_ndarr_raw_proc (PSAS-139)

Tag: V00-03-38
2016-02-22 Mikhail S. Dubrovin
- AreaDetector.py, PyDetectorAccess.py - add methods save_txtnda, load_txtnda (PSAS-139)
- add ex_save_load_nda.py, update ex_all_dets.py

Tag: V00-03-37
2016-02-19 Mikhail S. Dubrovin
- in PyDetectorAccess.py and AreaDetector.py add method point_indexes.
- add ex_andor3d_config.py, update ex_all_dets.py
	
Tag: V00-03-36
2016-02-12 Mikhail S. Dubrovin
- PyDetectorAccess.raw_data_cspad2x2 - hide configuration wornings under pbits (PSAS-139)

Tag: V00-03-35
2016-02-11 Christopher O'Grady
- Remove print statement from ControlDataDetector

Tag: V00-03-34
2016-02-11 Mikhail S. Dubrovin
- PyDetectorAccess - update raw_data_andor, raw_data_cspad2x2 - return data even for roiMask=1 (PSAS-139)
- AreaDetector - do not reshape andor3d ndarray from data

Tag: V00-03-33
2016-02-09 Mikhail S. Dubrovin
- add ex_andor3d.py
	
Tag: V00-03-32
2016-02-08 Mikhail S. Dubrovin
- add support for Andor3d (PSAS-139)
    - PyDataAccess.py - add get_andor_config_object, get_andor_data_object