@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 =======
+Tag: V00-03-43
+2016-03-15 Christopher O'Grady
+- add "name" attribute to detector so users can query the full-name of a detector
+
 Tag: V00-03-42
 2016-03-07 Mikhail S. Dubrovin
 - app/det_ndarr_average - save max file w/o header for cspad2x2
